# finance_agent

./: main.py  pyproject.toml  requirements.txt  server.py  test.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
next-frontend/: package-lock.json  package.json
next-frontend/src/app/: page.tsx
next-frontend/src/components/ui/: squares-background.tsx
